# OOP2_TESTS

main/: CMakeLists.txt  add.h  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/cmake/: FindMain.cmake
